make sure icon is z-index high as well

--- a/src/components/postcard.module.css
+++ b/src/components/postcard.module.css
@@ -81,6 +81,7 @@
   flex-direction: column;
   justify-content: start;
   padding: 40px;
+  height: 100%;
   align-items: start;
   border-right: 1px dotted black;
   overflow-y: scroll;
@@ -120,6 +121,7 @@
   align-items: center;
   height: 100%;
   width: 100%;
+  z-index: 30;
 }
 
 .greetings {
